--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ numpy
 matplotlib
 seaborn
 scipy
-sphinx
-sphinx-rtd-theme
+pandas
+sphinx==7.1.2
+sphinx-rtd-theme==1.3.0rc1
 sphinx-tabs
 numpydoc
+nbsphinx
 
