--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "Package for atmospheric transparency grids"
 readme = "README.md"
 requires-python = ">=3.7"
-license = { text = "BSD" }
+license = { text = "BSD-3-Clause" }
 authors = [
     { name = "S. Dagoret-Campagne", email = "sylvie.dagoret-campagne@ijclab.in2p3.fr" }
 ]
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Astronomy",
 ]
 dependencies = [
@@ -34,9 +35,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = [
-    "nose",
-]
+test = ["nose"]
 doc = [
     "sphinx==7.1.2",
     "sphinx-rtd-theme==1.3.0rc1",
@@ -49,18 +48,17 @@ doc = [
 
 [project.urls]
 Homepage = "https://github.com/LSSTDESC/getObsAtmo"
-Documentation = "https://github.com/LSSTDESC/getObsAtmo/docs"
+Documentation = "https://lsstdesc.github.io/getObsAtmo/"
 Repository = "https://github.com/LSSTDESC/getObsAtmo.git"
 
 [tool.setuptools]
 package-dir = { "" = "." }
 packages = ["getObsAtmo"]
 
+
 [tool.setuptools.package-data]
-getObsAtmo = [
-    "../obsatmo_data/*.pickle",
-    "../obsatmo_data/*.npy",
-]
+getObsAtmo = ["obsatmo_data/*.npy", "obsatmo_data/*.pickle", "obsatmo_data/*.json"]
 
 [tool.setuptools.dynamic]
 version = { attr = "getObsAtmo._version.__version__" }
+
