--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,3 +31,9 @@ repos:
       - id: mypy
         args: ["--ignore-missing-imports"]
         additional_dependencies: ["numpy", "pandas", "matplotlib", "scipy"]
+
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.8.1
+    hooks:
+      - id: nbstripout
+        files: \.ipynb$
