--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, 43-add-github-actions]
   pull_request:
-    branches: [main, master]
+    branches: [main, master, 43-add-github-actions]
 
 jobs:
   test:
