--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,11 @@ dev = ["tox",
 "codecov"]
 
 doc = [
-    "sphinx==7.1.2",
-    "sphinx-rtd-theme==1.3.0rc1",
+    "sphinx>=7.0",
+    "sphinx-rtd-theme",
     "sphinx-tabs",
     "numpydoc",
+    "myst-nb",
     "nbsphinx",
     "pydot",
     "graphviz",
