--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py39, py310, py311, py312,lint
+envlist = py39, py310, py311, py312,lint,docs
 isolated_build = True
 skip_missing_interpreters = True
 
@@ -19,3 +19,11 @@ skip_install = false
 deps = pre-commit
 commands =
     pre-commit run --all-files
+
+
+[testenv:docs]
+description = "Build Sphinx documentation"
+deps =
+    .[doc]
+changedir = docs
+commands = make html
