--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[doc]
+          pip install ipykernel
+          python -m ipykernel install --user --name getObsAtmo --display-name "Python (getObsAtmo)"
 
       - name: Build docs
         run: |
