--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
-# tox.ini
 [tox]
-envlist = py39, py310, py311, py312,lint,docs
+envlist = py312, lint, test
 isolated_build = True
 skip_missing_interpreters = True
 
-[testenv]
+[testenv:test]
 description = Run pytest with coverage
 deps =
     pytest
@@ -15,15 +14,14 @@ commands =
 [testenv:lint]
 description = Run pre-commit hooks (black, flake8, mypy)
 skip_install = false
-
 deps = pre-commit
 commands =
     pre-commit run --all-files
 
-
-[testenv:docs]
-description = "Build Sphinx documentation"
+[testenv:py312]
+description = Run tests with Python 3.12
 deps =
-    .[doc]
-changedir = docs
-commands = make html
+    pytest
+    pytest-cov
+commands =
+    pytest --cov=getObsAtmo --cov-report=term-missing
