keep notebooks for doc

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,3 +37,5 @@ repos:
     hooks:
       - id: nbstripout
         files: \.ipynb$
+        args: ["--keep-output"]
+        exclude: ^docs/source/notebooks/
