--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, master, 43-add-github-actions]
+    branches: [main, master]
   pull_request:
-    branches: [main, master, 43-add-github-actions]
+    branches: [main, master]
 
 jobs:
   test:
