--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,27 @@
 [tox]
-envlist = py312, lint, test
+envlist = py312, py313, lint, test
 isolated_build = True
 skip_missing_interpreters = True
+
+############################################
+# Test environments for Python versions
+############################################
+
+[testenv:py312]
+description = Run tests with Python 3.12
+deps =
+    pytest
+    pytest-cov
+commands =
+    pytest --cov=getObsAtmo --cov-report=term-missing
+
+[testenv:py313]
+description = Run tests with Python 3.13
+deps =
+    pytest
+    pytest-cov
+commands =
+    pytest --cov=getObsAtmo --cov-report=term-missing
 
 [testenv:test]
 description = Run pytest with coverage
@@ -11,17 +31,18 @@ deps =
 commands =
     pytest --cov=getObsAtmo --cov-report=term-missing
 
+############################################
+# Linting environment
+############################################
+
 [testenv:lint]
 description = Run pre-commit hooks (black, flake8, mypy)
 skip_install = false
-deps = pre-commit
-commands =
-    pre-commit run --all-files
-
-[testenv:py312]
-description = Run tests with Python 3.12
 deps =
-    pytest
-    pytest-cov
+    pre-commit
+    flake8
 commands =
-    pytest --cov=getObsAtmo --cov-report=term-missing
+    # Run all pre-commit hooks
+    pre-commit run --all-files
+    # Run flake8 directly in tox env to catch style issues
+    flake8 atmanalyticalmodels getObsAtmo
