--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test getObsAtmo
 
 on:
   push:
-    branches: [main, master, 46-check-python-313]
+    branches: [main, master]
   pull_request:
     branches: [main, master]
 
