try python version 3.13 and 3.14

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py312, py313, lint, test
+envlist = py312, py313,py314 lint, test
 isolated_build = True
 skip_missing_interpreters = True
 
@@ -17,6 +17,14 @@ commands =
 
 [testenv:py313]
 description = Run tests with Python 3.13
+deps =
+    pytest
+    pytest-cov
+commands =
+    pytest --cov=getObsAtmo --cov-report=term-missing
+
+[testenv:py314]
+description = Run tests with Python 3.14
 deps =
     pytest
     pytest-cov
