correct a bug in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py312, py313,py314 lint, test
+envlist = py312, py313, py314, lint, test
 isolated_build = True
 skip_missing_interpreters = True
 
