--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        python-version: [3.12, 3.13]
+        python-version: [3.11, 3.12, 3.13, 3.14]
 
     steps:
       - uses: actions/checkout@v4
@@ -31,4 +30,4 @@ jobs:
         run: pre-commit run --all-files
 
       - name: Run tests with tox
-        run: tox -e py312,test,lint
+        run: tox -e py${{ matrix.python-version//. }},lint
