--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.11, 3.12, 3.13, 3.14]
+        python-version: [3.11, 3.12, 3.13]
 
     steps:
       - uses: actions/checkout@v4
@@ -30,4 +30,6 @@ jobs:
         run: pre-commit run --all-files
 
       - name: Run tests with tox
-        run: tox -e py${{ matrix.python-version//. }},lint
+        run: |
+          PYVER=$(echo "${{ matrix.python-version }}" | sed 's/\.//')
+          tox -e py${PYVER},lint
